Fix gradle script, add screenshot.

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml' ]
 }
 
-mainClassName = 'life/org.netomi.life.LifeApplication'
+mainClassName = 'netomi.life/org.netomi.life.LifeApplication'
 
 jar {
     manifest {
